--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "cross-env": "7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "joi": "^17.8.3",
-    "mongoose": "^7.0.2",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.0.3",
     "morgan": "^1.10.0",
     "uuid": "^9.0.0"
   },
