--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "cross-env NODE_ENV=production node ./server.js",
     "start:dev": "cross-env NODE_ENV=development nodemon ./server.js",
     "lint": "eslint **/*.js",
-    "lint:fix": "eslint --fix **/*.js"
+    "lint:fix": "eslint --fix **/*.js",
+    "test": "jest"
   },
   "dependencies": {
     "axios": "^1.3.4",
@@ -16,6 +17,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "gravatar": "^1.8.2",
+    "jest": "^29.5.0",
     "jimp": "^0.22.7",
     "joi": "^17.8.3",
     "jsonwebtoken": "^9.0.0",
@@ -31,6 +33,7 @@
     "eslint-plugin-import": "2.25.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "5.2.0",
-    "nodemon": "2.0.15"
+    "nodemon": "2.0.15",
+    "supertest": "^6.3.3"
   }
 }
